[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genomics-data-index"
version = "0.9.1"
authors = [
  { name="Aaron Petkau", email="aaron.petkau@gmail.com" },
]
description = "Indexes genomics data (nucleotide variants, kmers, MLST) for fast querying of features."
readme = "README.md"

# I need to restrict to less then 3.10 now due to this issue in ete3
# https://github.com/etetoolkit/ete/issues/635
# This stems from issues in PyQt5
requires-python = ">=3.8,<3.10"

dependencies = [
  'biopython>=1.70',
  'pandas>=1.0.0',
  'numpy',
  'scikit-bio',

  # Need to restrict scipy due to this issue in scikit-bio (https://github.com/biocore/scikit-bio/issues/1818)
  'scipy<1.9',

  'vcfpy',
  'sqlalchemy',
  'pymysql',
  'requests',

  # ete3 requires PyQt5 for some functionality <https://github.com/etetoolkit/ete/issues/354>
  'ete3',
  'PyQt5',

  'biocommons.seqrepo',
  'click',
  'click-config-file',
  'coloredlogs',
  'pyyaml',
  'pyroaring',
  'sourmash',
  'pybedtools',
  'snakemake',
  'Jinja2',
  'pathvalidate',
  'pytest',
  'zipp',
  'packaging'
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: POSIX :: Linux"
]

[project.scripts]
gdi = "genomics_data_index.cli.gdi:main"

[project.urls]
"Homepage" = "https://github.com/apetkau/genomics-data-index"
"Bug Tracker" = "https://github.com/apetkau/genomics-data-index/issues"
